--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.CourseWork"
         tools:targetApi="31">
         <activity
+            android:name=".LabTestDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".LabTestActivity"
             android:exported="false" />
         <activity
