--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.CourseWork"
         tools:targetApi="31">
         <activity
+            android:name=".BuyMedicineBookActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CartBuyMedicineActivity"
+            android:exported="false" />
+        <activity
             android:name=".BuyMedicineDetailsActivity"
             android:exported="false" />
         <activity
